--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -79,6 +79,7 @@ h1, h2, h3, h4, h5 {
 	padding-left: 15px ;
 	color: grey;
 	text-decoration: none;
+	font-family: 'Fredoka One', cursive;
 }
 .sec-1 {
 border-bottom: 2px solid black;
@@ -106,7 +107,7 @@ padding-bottom: 20px;
 margin-right:  9% ;
 padding-top: 30px ;
 padding-bottom: 30px ;
-border-bottom: 2px solid black;
+border-bottom: 1px solid black;
 
 }
 .sub-sec {
